# NewsRAG

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.opencode/plans/: fix-flink-chunker-dependency.md  observability-features.md  rag-implementation.md
config/: sources.json
docker/: Dockerfile.flink
scripts/: run_ui.sh
src/RAG/: embedder.py  generator.py  graph.py  pipeline.py  reranker.py  retriever.py  vector_store.py
src/UI/static/: style.css
src/UI/templates/: base.html  chat.html  dashboard.html  sources.html
src/api/: chat.py  main.py  routes.py  sources.py
src/common/: config.py  exceptions.py  health.py  models.py  text_splitter.py
src/ingestion/: news_consumer.py  news_puller.py
src/streaming/: news_pipeline_job.py  news_printer_job.py
tests/common/: test_text_splitter.py
tests/ingestion/: test_news_puller.py
