[project]
name = "rag-news"
version = "0.1.0"
description = "Real-time RAG pipeline for news data with Kafka + PyFlink"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6",
    "confluent-kafka>=2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5.0",
    "langchain-text-splitters>=0.3",
    "langchain>=0.3",
    "langchain-ollama>=0.3",
    "langchain-chroma>=0.2",
    "langgraph>=0.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "black>=24",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
